a bunch of things